fix: issues with overflow and obsured contents

--- a/src/styles/cores/_layout.scss
+++ b/src/styles/cores/_layout.scss
@@ -2,6 +2,7 @@
    max-width: 1400px;
    margin-left: auto;
    margin-right: auto;
+   flex: 1 1 100%;
 
    @include mq($until: wide) {
       padding-left: 50px;
@@ -19,11 +20,11 @@
 }
 
 .full-height--w-footer {
-   height: calc(100vh - 52px); // Minus height of footer
+   min-height: calc(100vh - 52px); // Minus height of footer
 }
 
 .full-height {
-   height: 100vh;
+   min-height: 100vh;
 }
 
 // Grid layout
