--- a/src/styles/modules/_contact.scss
+++ b/src/styles/modules/_contact.scss
@@ -5,7 +5,8 @@
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
-   padding-top: 120px;
+   padding-top: 50px;
+   padding-bottom: 30px;
 }
 .contact-form {
    input, textarea {
