--- a/src/styles/modules/_homepage.scss
+++ b/src/styles/modules/_homepage.scss
@@ -4,7 +4,6 @@
    display: flex;
    align-items: center;
    flex-wrap: wrap;
-   height: 100%;
 }
 .homepage__contents {
    @include mq(desktop) {
